ensure sign-in and sign-out icons are visible for logged out users

--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -3,7 +3,10 @@
     border: 1px solid #dadadf;
 }
 
-.CreatePost {
-    margin-top: 10px;
-    text-align: center;
+.NavLink {
+  padding: 5px;
+}
+
+.Active i {
+  color: #a2c4c9;
 }
